codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_action_picker_unavailable.snap
---
source: tui/src/chatwidget/tests/review_flow.rs
assertion_line: 403
expression: "render_bottom_popup(&chat, 80)"
---
  Choose a review action

›    Review requires Windows sandboxing for the selected local executor.

  Press enter to confirm or esc to go back
