codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_advanced_branch_picker_preferred_base.snap
---
source: tui/src/chatwidget/tests/review_flow.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Select a base branch

  Type to search branches

› feature/review -> release         Pull request base
  feature/review -> feature/review
  feature/review -> main (default)

  enter select · esc back
