codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_report_renders_on_exit.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: rendered
---
<< Code review finished >>

• ## Assessment

  Patch is correct.

  ## Findings

  No findings.
