codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_scope_legacy_server_git_error.snap
---
source: tui/src/chatwidget/tests/review_flow.rs
assertion_line: 92
expression: "render_bottom_popup(&chat, 80)"
---
  Select a review scope

     Could not detect Git review scopes.
› 1. Custom review instructions

  Press enter to confirm or esc to go back
