codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_scope_loading_picker.snap
---
source: tui/src/chatwidget/tests/review_flow.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Select a review scope


›    Loading review scopes...

  enter select · esc back
