codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_scope_uncommitted_fallback_picker.snap
---
source: tui/src/chatwidget/tests/review_flow.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Select a review scope


› 1. Review uncommitted changes
  2. Choose a base branch        Select a specific branch
  3. Review a commit
  4. Custom review instructions

  enter select · esc back
