codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_verification_picker.snap
---
source: tui/src/chatwidget/tests/review_flow.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Choose review verification

› 1. Don't double-check  Use the discovery report directly.
  2. Double-check        Verify each candidate in a fresh review stage.

  Press enter to confirm or esc to go back
